Grundstruktur Linguisic Matching erweitert. Was noch fehlt: WordNet Lib Funktionen, Parallelisierung, TokenType Problem